tests/parser/errors/trap.ray
func() trap call() {}
func() trap 12 {}
func() trap AnyErr.error1 {}
func() trap err print err
func() trap {}
